--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-51.htm
@@ -40,7 +40,7 @@ To add an editor to the list:
 <p>When you associate an internal editor with a file type, that editor opens in
 the editor area of the workbench, for example if you double-click a file in the
 Navigator or an entry in the Bookmarks or Tasks view.</p>
-<p><img border="0" src="../images/ngwin.gif" width="49" height="13"> Editors that support OLE document
+<p><img border="0" src="../images/ngwin.gif" alt="Windows only"> Editors that support OLE document
 mode can also run in the workbench.</p>
 <p><b>Tip</b>: You can choose to override your default editor selections by
 selecting <b>Open With </b>from the pop-up menu for any resource in the
