--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
@@ -35,7 +35,7 @@ To merge a single change:</p>
 <p CLASS="Head">The image below gives an example of two files file1.txt and 
 file2.txt compared </p>
 <p>
-<img align="texttop" border="0" src="../images/image80_compare_editor.jpg" width="446" height="267" alt=" "></p>
+<img align="texttop" border="0" src="../images/image80_compare_editor.jpg" width="446" height="267" alt=" Compare view"></p>
 
 
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
