--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-80.htm
@@ -17,13 +17,13 @@ on any resource in the workbench.</P>
 workbench. To show the Bookmarks view choose Perspective &gt; Show View &gt;
 Bookmarks while in the Resource perspective.</p>
 <blockquote>
-  <p>&nbsp;<img align="texttop" border="0" src="../images/Image54_bookmark1.jpg" width="213" height="207"></p>
+  <p>&nbsp;<img align="texttop" border="0" src="../images/Image54_bookmark1.jpg"  alt="Bookmarks view"></p>
 </blockquote>
 <P CLASS="Para">
 &nbsp;</P>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" ></a>
 </p>
 
 </BODY>
