--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
@@ -12,7 +12,7 @@
 Searching</H1>
 <P CLASS="Para">
 You can search for text in the workbench.&nbsp;In this section will we
-will use the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg" width="20" height="19">
+will use the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg"  alt="Search button">
 to perform a search across the resources shown in our Navigator.&nbsp;&nbsp;</P>
 
 <p>&nbsp;<br>
