--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-75x.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-75x.htm
@@ -20,10 +20,10 @@ with any specific file.</p>
 <p CLASS="Para">In the figure below, &quot;sample task&quot; is a generic task
 not associated with any specific resource. The second task (&quot;add sixth line
 to the text&quot;) is associated with the file JanesFile.txt.</p>
-<p>&nbsp;<img align="texttop" border="0" src="../images/Image21_task_view.jpg" width="449" height="136"></p>
+<p>&nbsp;<img align="texttop" border="0" src="../images/Image21_task_view.jpg"  alt="Tasks view" ></p>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
