--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
@@ -1,1 +1,112 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Working with fast views</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Working with fast views</H1><p CLASS="Head">If you have converted the Navigator to a fast view it willappear in the shortcut bar as shown below.&nbsp;</p><blockquote>  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" width="67" height="175"></p></blockquote>  <p CLASS="Head">To work with a fast view proceed as follows.</p><TABLE BORDER="0" cellspacing="0" cellpadding="3"><THEAD></THEAD><TBODY><TR><TD COLSPAN="1" valign="top" align="left"><P CLASS="Para"><b>1.</b></P></TD><TD COLSPAN="1" valign="top" align="left"><P CLASS="Para">In the shortcut bar click on the Navigator fast view button.</P></TD></TR><TR><TD COLSPAN="1" valign="top" align="left"><P CLASS="Para"><b>2.</b></P></TD><TD COLSPAN="1" valign="top" align="left"><P CLASS="Para">Observe the Navigator view slides out from the shortcut bar.&nbsp; </P><P CLASS="Para"><img align="texttop" border="0" src="../images/Image61_nav_fast.jpg" width="368" height="283"> </P></TD></TR><TR><TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"><P CLASS="Para"><b>3.</b></P></TD><TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"><P CLASS="Para">You can use the Navigator fast view as you would normally.&nbsp;&nbsp; </P></TD></TR><TR><TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"><P CLASS="Para"><b>4.</b></P></TD><TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"><P CLASS="Para">To hide the fast view simply click off of it or click on the Minimize button onthe fast view's toolbar </P><P CLASS="Para"><img align="texttop" border="0" src="../images/Image61_fast_minimize.jpg" width="264" height="69"> </P><P CLASS="Para">&nbsp; </P><P CLASS="Para">Note: If you open a file from the Navigator fast view, the fastview will automatically hide itself to allow you to work with thefile.&nbsp;&nbsp; </P></TD></TR></TBODY></TABLE><P>&nbsp;To convert a fast view back to a regular view you can either:</P><ul>  <li>Click the Restore button on the fast view's toolbar <br>    <img align="texttop" border="0" src="../images/Image61_fast_restore.jpg" width="264" height="69"><br>  </li>  <li>Choose Restore from the context menu of the icon in the top left corner of    the view. </li></ul><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="../concepts/concepts-5.htm">Views</a><br><a href="../concepts/concepts-21.htm">Fast views</a><br><a href="../concepts/concepts-4.htm">Perspectives</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-9b.htm">Creating fast views</a><br><a href="tasks-3.htm">Opening views</a><br><a href="tasks-3e.htm">Docking views</a><br><a href="tasks-3i.htm">Maximizing a view or editor</a><br><a href="tasks-9i.htm">Saving perspectives</a><br><a href="tasks-9j.htm">Resetting perspectives</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Working with fast views</title>
+
+</HEAD>
+<BODY BGCOLOR="#ffffff">
+<H1 CLASS="Head">
+Working with fast views</H1>
+<p CLASS="Head">If you have converted the Navigator to a fast view it will
+appear in the shortcut bar as shown below.&nbsp;</p>
+<blockquote>
+  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" width="67" height="175" alt="Show fast view"></p>
+</blockquote>
+  <p CLASS="Head">To work with a fast view proceed as follows.</p>
+<TABLE BORDER="0" cellspacing="0" cellpadding="3">
+<THEAD>
+</THEAD>
+<TBODY>
+<TR>
+<TD COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">
+<b>
+1.</b>
+</P>
+</TD>
+<TD COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">In the shortcut bar click on the Navigator fast view button.</P>
+</TD>
+</TR>
+<TR>
+<TD COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">
+<b>2.</b>
+</P>
+</TD>
+<TD COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">
+Observe the Navigator view slides out from the shortcut bar.&nbsp; </P>
+<P CLASS="Para">
+<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg" width="368" height="283" alt="Fast view"> </P>
+</TD>
+</TR>
+<TR>
+<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">
+<b>3.</b>
+</P>
+</TD>
+<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">
+You can use the Navigator fast view as you would normally.&nbsp;&nbsp; </P>
+</TD>
+</TR>
+<TR>
+<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">
+<b>4.</b>
+</P>
+</TD>
+<TD ROWSPAN="1" COLSPAN="1" valign="top" align="left">
+<P CLASS="Para">
+To hide the fast view simply click off of it or click on the Minimize button on
+the fast view's toolbar </P>
+<P CLASS="Para">
+<img align="texttop" border="0" src="../images/Image61_fast_minimize.jpg" width="264" height="69" alt="Minimze button"> </P>
+<P CLASS="Para">&nbsp; </P>
+<P CLASS="Para">Note: If you open a file from the Navigator fast view, the fast
+view will automatically hide itself to allow you to work with the
+file.&nbsp;&nbsp; </P>
+</TD>
+</TR>
+</TBODY>
+</TABLE>
+<P>&nbsp;To convert a fast view back to a regular view you can either:
+</P>
+
+
+<ul>
+  <li>Click the Restore button on the fast view's toolbar <br>
+    <img align="texttop" border="0" src="../images/Image61_fast_restore.jpg" width="264" height="69" alt="Pin button"><br>
+  </li>
+  <li>Choose Restore from the context menu of the icon in the top left corner of
+    the view. </li>
+</ul>
+
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
+<a href="../concepts/concepts-5.htm">Views</a><br>
+<a href="../concepts/concepts-21.htm">Fast views</a><br>
+<a href="../concepts/concepts-4.htm">Perspectives</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-9b.htm">Creating fast views</a><br>
+<a href="tasks-3.htm">Opening views</a><br>
+<a href="tasks-3e.htm">Docking views</a><br>
+<a href="tasks-3i.htm">Maximizing a view or editor</a><br>
+<a href="tasks-9i.htm">Saving perspectives</a><br>
+<a href="tasks-9j.htm">Resetting perspectives</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
