deleting unused files

--- a/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
@@ -43,7 +43,8 @@ to the current perspective, click <b>Window &gt; Show View &gt; Basic &gt; Tasks
 <a href="../tasks/tasks-79.htm">Filtering the task list</a><br>
 <a href="../tasks/tasks-81b.htm">Creating a bookmark for an entire file</a><br>
 <a href="../tasks/tasks-81.htm">Creating a bookmark within a file</a><br>
-<a href="../tasks/tquickfix.htm">Automatically fixing problems</a>
+<a href="../tasks/tquickfix.htm">Automatically fixing problems</a><br>
+<a href="../tasks/tasks-78.htm">Deleting tasks</a>
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
