--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-52.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-52.htm
@@ -1,45 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Editing files outside the workbench</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Editing files outside the workbench</H1>
-<P CLASS="Para">
-If for some reason you wish to edit a workbench resource outside the workbench,
-do the following steps: </P>
-<ol>
-  <li>
-    <p CLASS="Para">
-Navigate in the file system to the workbench's installation directory. Go into
-the workspace directory and open the file that you want to edit in an external editor.</li>
-  <li>
-    <p CLASS="Para">Edit the file as needed. Save and close it as usual.</li>
-  <li>
-    <p CLASS="Para"><b>Important</b>: Go back to the workbench, right-click the
-    edited file in the Navigator view, and select <b>Refresh from Local</b> from
-    the pop-up menu. The workbench will perform any necessary build or update
-    operations to process the changes that you made outside the workbench.</li>
-</ol>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-2.htm"><br>
-</a><a href="../concepts/concepts-6.htm">
-Editors</a><a href="../concepts/concepts-6a.htm"><br>
-External editors</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-46.htm">Opening files for editing</a><br>
-<a href="tasks-51.htm">Associating editors with file types</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Editing files outside the workbench</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Editing files outside the workbench</H1><P>If for some reason you wish to edit a workbench resource outside the workbench,do the following steps: </P><ol>  <li>Navigate in the file system to the workbench's installation directory. Go     into the workspace directory and open the file that you want to edit with the     external editor.</li>  <li>Edit the file as needed. Save and close it as usual.</li>  <li><em>Important</em>: Go back to the workbench, right-click the    edited file in the Navigator view, and select <b>Refresh</b> from    the pop-up menu. The workbench will perform any necessary build or update    operations to process the changes that you made outside the workbench.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-6.htm">Editors</a><br><a href="../concepts/concepts-6a.htm">External editors</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-46.htm">Opening files for editing</a><br><a href="tasks-51.htm">Associating editors with file types</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
