Deleting ref-66 (Processes view)

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
@@ -45,16 +45,12 @@ program</a><br>
 <a href="../tasks/tasks-126.htm">Running and 
 debugging</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-66.htm">Processes view</a></p>
+<p><a href="../reference/ref-51.htm">Debug view</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
 
 </P>
-
-
-
-
 
 </BODY>
 </HTML>
