--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02a.htm
@@ -21,7 +21,7 @@ in the title of the window and its icon in the shortcut bar is a pushed-in icon.
 </P>
 <P CLASS="Para"> Looking
 at the title bar of the workbench window we can see that we are working with
-the&nbsp; Resource perspective.&nbsp; The Navigator, Tasks and
+the&nbsp; Resource perspective.&nbsp; The Navigator, Tasks, and
 Outline views are open, along with an editor on the welcome page.&nbsp; You
 might want to take a moment to peruse the welcome page. It provides a quick
 starting point if you are eager to customize your workbench or learn about other
