--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-1b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-1b.htm
@@ -1,1 +1,44 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Working with views and editors</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Working with views and editors</H1><p>Views and editors are the main visual entities which appear in the Workbench.   In any given perspective there is a single editor area, which can contain multiple   editors, and a number of surrounding views which provide context.</p><p>The Workbench provides a number of operations for working with views and editors.See the Related tasks links for more details.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-5.htm">Views</a><br><a href="../concepts/concepts-6.htm">Editors</a><br><a href="../concepts/concepts-21.htm">Fast views</a><br><a href="../concepts/concepts-4.htm">Perspectives</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-3.htm">Opening views</a><br><a href="tasks-46.htm">Opening files for editing</a><br><a href="tasks-3e.htm">Moving and docking views</a><br><a href="tasks-3h.htm">Rearranging tabbed views</a><br><a href="tasks-9b.htm">Creating fast views</a><br><a href="tasks-3g.htm">Tiling editors</a><br><a href="tasks-3i.htm">Maximizing a view or editor</a><br><a href="tasks-9.htm">Changing the placement of editor tabs</a><br></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Working with views and editors</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Working with views and editors</H1>
+<p>Views and editors are the main visual entities which appear in the Workbench. 
+  In any given perspective there is a single editor area, which can contain multiple 
+  editors, and a number of surrounding views which provide context.
+</p>
+
+<p>The Workbench provides a number of operations for working with views and editors.
+See the Related tasks links for more details.
+</p>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-5.htm">Views</a><br>
+<a href="../concepts/concepts-6.htm">Editors</a><br>
+<a href="../concepts/concepts-21.htm">Fast views</a><br>
+<a href="../concepts/concepts-4.htm">Perspectives</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-3.htm">Opening views</a><br>
+<a href="tasks-46.htm">Opening files for editing</a><br>
+<a href="tasks-3e.htm">Moving and docking views</a><br>
+<a href="tasks-3h.htm">Rearranging tabbed views</a><br>
+<a href="tasks-9b.htm">Creating fast views</a><br>
+<a href="tasks-3g.htm">Tiling editors</a><br>
+<a href="tasks-3i.htm">Maximizing a view or editor</a><br>
+<a href="tasks-9.htm">Changing the placement of editor tabs</a><br>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
