--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9b.htm
@@ -1,1 +1,58 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Creating fast views</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Creating fast views</H1><p>Fast views are hidden views that can be quickly opened and closed. They work   like other views except they do not take up space in your workbench window.</p><p>To create a fast view:</p><ol>  <li>Click the title bar of the view that you want. Hold the mouse button down.</li>  <li>Drag the view to the shortcut bar at the far left of the window and release the mouse button.</li></ol><p>The icon for the view that you dragged now appears on the shortcut   bar. You can look at the view by clicking its icon on the shortcut bar. As soon   as you click somewhere else outside the view, it is hidden again.</p><p>To restore the view to its original location (to delete the fast   view), click on the Fast View icon <img src="../images/tasks-7.gif" width="16" height="16">  in the title bar of the view.</p><p>You can also create and restore fast views by selecting <b>Fast   View</b> from the context menu that opens when you click the   icon at the left side of the view's title bar.</p>  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="../concepts/concepts-5.htm">Views</a><br><a href="../concepts/concepts-21.htm">Fast views</a><br><a href="../concepts/concepts-4.htm">Perspectives</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-9c.htm">Working with fast views</a><br><a href="tasks-3.htm">Opening views</a><br><a href="tasks-3e.htm">Moving and docking views</a><br><a href="tasks-3i.htm">Maximizing a view or editor</a><br><a href="tasks-9i.htm">Saving a user-defined perspective</a><br><a href="tasks-9j.htm">Resetting perspectives</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Creating fast views</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Creating fast views</H1>
+
+<p>Fast views are hidden views that can be quickly opened and closed. They work 
+  like other views except they do not take up space in your workbench window.
+</p>
+
+<p>To create a fast view:</p>
+<ol>
+  <li>Click the title bar of the view that you want. Hold the mouse button down.</li>
+  <li>Drag the view to the shortcut bar at the far left of the window and release the mouse button.</li>
+</ol>
+
+<p>The icon for the view that you dragged now appears on the shortcut 
+  bar. You can look at the view by clicking its icon on the shortcut bar. As soon 
+  as you click somewhere else outside the view, it is hidden again.
+</p>
+
+<p>To restore the view to its original location (to delete the fast 
+  view), click on the Fast View icon <img src="../images/tasks-7.gif" width="16" height="16">
+  in the title bar of the view.
+</p>
+
+<p>You can also create and restore fast views by selecting <b>Fast 
+  View</b> from the context menu that opens when you click the 
+  icon at the left side of the view's title bar.
+</p>
+  
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
+<a href="../concepts/concepts-5.htm">Views</a><br>
+<a href="../concepts/concepts-21.htm">Fast views</a><br>
+<a href="../concepts/concepts-4.htm">Perspectives</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-9c.htm">Working with fast views</a><br>
+<a href="tasks-3.htm">Opening views</a><br>
+<a href="tasks-3e.htm">Moving and docking views</a><br>
+<a href="tasks-3i.htm">Maximizing a view or editor</a><br>
+<a href="tasks-9i.htm">Saving a user-defined perspective</a><br>
+<a href="tasks-9j.htm">Resetting perspectives</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
