--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -4,14 +4,14 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Debugging Your Applications</title>
+<title>Debugging Your Programs</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Debugging Your Applications</H1>
+Debugging Your Programs</H1>
 <P CLASS="Para">
-In this section, you will debug a Java application.</P>
+In this section, you will debug a Java program.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
 <THEAD>
 </THEAD>
