Updated Doc for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Launching Your Programs</H1>
+Running Your Programs</H1>
 <P CLASS="Para">
 In this section, you will learn more about running Java programs in the workbench.</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
