--- a/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
@@ -31,14 +31,26 @@ the set of elements that are searched. </P>
 Different views provide different means to specify a working set. However, they 
 all use the following working set selection dialog to manage existing working 
 sets and to create new working sets.
-<img align="texttop" border="0" src="../images/ImageXXX_workset_sel.jpg" alt="Picture of working set selection dialog" width="250" height="200">
+</P>
+
+<P CLASS="Para" Label=Type>
+&nbsp;
+<img align="texttop" border="0" src="../images/Image87_workset_sel.jpg" alt="Picture of working set selection dialog" >
 </P>
 
 <P CLASS="Para" Label=Type>
 When you create a new working set you may be able to choose from different types
 of working sets. In the example below you can create a resource working set or a
 Java working set.
-<img align="texttop" border="0" src="../images/ImageXXX_workset_new_type.jpg" alt="Picture of type selection page of new working set wizard" width="250" height="200">
+</P>
+
+<P CLASS="Para" Label=Type>
+&nbsp;
+<img align="texttop" border="0" src="../images/Image88_workset_new_type.jpg" alt="Picture of type selection page of new working set wizard" >
+</P>
+
+<P CLASS="Para" Label=Type>
+&nbsp;
 </P>
 
 <P CLASS="Para" Label=Type>
@@ -46,7 +58,11 @@ If you create a new resource working set you will be able to select the working
 set resources as shown below. The same wizard is used to edit an existing working
 set. Different types of working sets provide different kinds of working set 
 editing wizards.
-<img align="texttop" border="0" src="../images/ImageXXX_workset_new_res.jpg" alt="Picture of edit page of working set wizard" width="250" height="200">
+</P>
+
+<P CLASS="Para" Label=Type>
+&nbsp;
+<img align="texttop" border="0" src="../images/Image89_workset_new_res.jpg" alt="Picture of edit page of working set wizard" >
 </P>
 
 <DIV CLASS="Note">
@@ -67,7 +83,7 @@ explicitly add them to the working set. </P>
 <a href="../tasks/tasks-48b.htm">Showing or hiding resources in the Navigator view</a><br>
 </p>
 <P CLASS="Para" Label=Type>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a></p>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 
 
 </BODY>
