--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
@@ -20,14 +20,16 @@ ourselves with the elements of the workbench. A workbench consists of:
   <li>
     editors</li>
 </ul>
-<p CLASS="Intro">A perspective is a set of views and editors in 
+<p CLASS="Intro">A perspective is a group of views and editors in 
 the workbench window. One or more perspectives can exist in a single workbench 
-window. Each perspective contains one or more views and editors.</p>
+window. Each perspective contains one or more views and editors. Within a
+window, each perspective may have a different set of views but all perspectives
+share the same set of editors.</p>
 <p CLASS="Intro">A view is  a visual component within the workbench. It is typically used to
 navigate a hierarchy of information (like the resources in your workbench), open an editor,
 or display properties for the active editor.  Modifications made in a view are saved immediately.
 Only one instance of a particular view type may exist within a workbench
-window.&nbsp;<br>
+window.&nbsp;
 </p>
 <p CLASS="Intro">An editor is also a visual component within the workbench. It is typically used to edit or browse a
 resource.  Modifications made in an editor follow an open-save-close lifecycle model.
