java runtime correction

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
@@ -27,8 +27,8 @@ org.eclipse.jdt.launching </b></a>
   provides classes for launching Java runtimes from the platform.&nbsp; 
    <b><a href="../reference/api/org/eclipse/jdt/launching/JavaRuntime.html">
  JavaRuntime</a>
-     </b> implements static methods that let you register a vm for a particular 
-project.&nbsp;     A family of VM's (such as the JDK) is represented by the 
+     </b> implements static methods to access registered VMs and compute runtime classpaths and source
+     lookup paths.&nbsp;     A family of VM's (such as the JDK) is represented by the 
     <a href="../reference/api/org/eclipse/jdt/launching/IVMInstallType.html"><b>
  IVMInstallType</b></a>
   class. <a href="../reference/api/org/eclipse/jdt/launching/IVMInstall.html"><b>
