Rework of remote launching

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-141.htm
@@ -4,23 +4,43 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Connecting to a remote VM with the Java remote application launcher</title>
+<title>Connecting to a remote VM with the Remote Java application launch configuration</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Connecting to a remote VM with the Java Remote Application launcher</H1>
+Connecting to a remote VM with the Remote Java application launch configuration</H1>
 <ol>
   <li>
 <p CLASS="Head">
 From the drop-down menu on the <b> <SPAN CLASS="Label">
-Debug</SPAN></b>
- button in the workbench toolbar, select <b>Debug</b> &gt; <b>Remote Application</b>.</li>
+Debug</SPAN></b> button in the workbench toolbar, select <b>Debug...</b>.</li>
+<li>
+<P CLASS="Para">
+In the launch configuration dialog, select the <b>Remote Java Application</b> entry in the left hand view.</li>
+
+<li>
+<P CLASS="Para">
+Click the  <b> <SPAN CLASS="Label">
+New</SPAN></b> button. A new remote launch configuration is created and three tabs are shown: <b>Connect</b>, <b>Source</b>, and <b>Common</b>.</li>
+
+<li>
+<P CLASS="Para">
+In the <b> <SPAN CLASS="Label">
+Project</SPAN></b> field of the 
+<b> <SPAN CLASS="Label">
+Connect</SPAN></b>
+ tab, type or browse to select the project to use as a reference for the launch (for source lookup).  A project does not need to be specified.
+</li>
+
 <li>
 <P CLASS="Para">
 In the <b> <SPAN CLASS="Label">
 Host</SPAN></b>
- field, type the IP address or domain name of the host where the Java program is running.
+ field of the 
+<b> <SPAN CLASS="Label">
+Connect</SPAN></b>
+ tab,  type the IP address or domain name of the host where the Java program is running.
 <br>
 If the program is running on the same machine as the workbench, type <SPAN CLASS="Filename">
 localhost</SPAN>.</P>
@@ -29,7 +49,10 @@ localhost</SPAN>.</P>
 <p CLASS="Head">
 In the <b> <SPAN CLASS="Label">
 Port</SPAN></b>
- field, type the port where the remote VM is accepting connections. Generally, this port is specified when the remote VM is launched.</li>
+ field of the 
+<b> <SPAN CLASS="Label">
+Connect</SPAN></b>
+ tab, type the port where the remote VM is accepting connections. Generally, this port is specified when the remote VM is launched.</li>
 <li>
 <p CLASS="Head">
 The <b> <SPAN CLASS="Label">
@@ -40,8 +63,8 @@ Terminate</SPAN></b>
 <li dir="ltr">
 <P CLASS="Para" dir="ltr">
 Click <b> <SPAN CLASS="Label">
-Finish</SPAN></b>.
-The launcher attempts to connect to a VM at the specified address and port, and the result is displayed in the Debug view. If the launcher is unable to connect to a VM at the specified address, an error message appears.</P>
+Debug</SPAN></b>.
+The launch attempts to connect to a VM at the specified address and port, and the result is displayed in the Debug view. If the launcher is unable to connect to a VM at the specified address, an error message appears.</P>
 </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
@@ -60,10 +83,5 @@ arguments</a></p>
 <img src = ../images/ngibmcpy.gif width="195" height="12">
 
 </P>
-
-
-
-
-
 </BODY>
 </HTML>
