*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
@@ -26,7 +26,7 @@ IResource.refreshLocal()</b></a> method.</p>
 plug-in libraries. They have to be in a separate JAR. This means that the
 plug-in classes do not have access to the tasks and types provided by the 
 plug-in.&nbsp; (See 
-<a href="#Why a separate JAR for tasks and types">Why a separate JAR for tasks and types</a>?
+<a href="#jar">Why a separate JAR for tasks and types</a>?
 for more information.)</p>
 
 
@@ -83,7 +83,7 @@ The following should work as a checklist for plug-in developers:</p>
 </ul>
 
 
-<a name="Why a separate JAR for tasks and types"/>
+<a NAME="jar"></A>
 <h3>Why a separate JAR for tasks and types?</h3>
 <p>
 There are basically two requirements for running Ant in Eclipse that do not fit
