Rework of remote launching

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-10.htm
@@ -25,8 +25,7 @@ The debugger has a client/server design so you can debug programs running remote
 <p dir="ltr">
 <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
 <a href="../tasks/tasks-9.htm">Changing debugger launch options</a><br>
-<a href="../tasks/tasks-141.htm">Connecting to a 
-remote VM with the Java Remote Application launcher</a><br>
+<a href="../tasks/tasks-141.htm">Connecting to a remote VM with the Remote Java application launch configuration</a><br>
 <a href="../tasks/tasks-142.htm">Disconnecting from 
 a VM</a><br>
 <a href="../tasks/tasks-138.htm">Evaluating 
