--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-142.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-142.htm
@@ -28,8 +28,7 @@ Communication with the VM is terminated, and all threads in the remote VM are re
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-10.htm">Debugger</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-141.htm">Connecting to a 
-remote VM with the Java Remote Application launcher</a><br>
+<p><a href="../tasks/tasks-141.htm">Connecting to a remote VM with the Remote Java application launch configuration</a><br>
 <a href="../tasks/tasks-126.htm">Running and 
 debugging</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
