--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -41,10 +41,11 @@ after the script runs.</p>
 </ol>
 
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-22.htm"><br>
-</a><a href="../concepts/cantsup.htm">Ant support<br>
-</a><a href="../concepts/concepts-22.htm">Builds</a></p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-22.htm">Builds</a></p>
 
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<br><a href="../reference/ref-7.htm">Ant support</a></p>
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
