Updating execution arguments doc

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
@@ -11,21 +11,18 @@
 <H1 CLASS="Head">
 Setting execution arguments</H1>
 <P CLASS="Para">
-Execution arguments may be set for any class that defines the method <SPAN CLASS="Filename">
-public static void main(String[] args)</SPAN>.</P>
+Execution arguments may be set for a launch configuration</P>
 <ol>
+ <li>
+<p CLASS="Head">
+From the drop-down menu on the <b> <SPAN CLASS="Label">
+Debug</SPAN></b> button in the workbench toolbar, select <b>Debug...</b>.</li>
+<li>
+<P CLASS="Para">
+In the launch configuration dialog, select the launch configuration you wish to specify execution arguments for</li>
   <li>
 <P CLASS="Para">
-In the Package Explorer view, select the Java compilation unit or class file for which you want to set execution arguments. </P>
-  </li>
-  <li>
-<P CLASS="Para">
-From its pop-up menu, select <b> <SPAN CLASS="Label">
-Properties</SPAN></b>.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-On the Execution Arguments page, you can use the following fields as needed:</P>
+On the <b>Arguments</b> tab for the configuration, you can use the following fields as needed:</P>
 <UL CLASS="UnorderedList">
 <LI CLASS="Item">
 <b>
@@ -36,33 +33,34 @@ expecting (a user name or a URL for locating help files, for example).</LI>
 <b>
 <SPAN CLASS="Label">
 VM Arguments</SPAN></b>: Values meant to change the behavior of the Java virtual machine (VM). For example, you may need to tell the VM whether to use a just-in-time (JIT) compiler, or you may need to specify the maximum heap size the VM should use. Refer to your VM's documentation for more information about the available VM arguments.</LI>
+<LI CLASS="Item">
+<b>
+<SPAN CLASS="Label">
+Working Directory</SPAN></b>: The working directory used for the launched process.  To change from using the default working directory, uncheck
+<SPAN CLASS="Label">
+<b>Use default working directory</b> </SPAN> and specify the workspace or local directory to use for the working directory of the launched process.
+</LI>
 </UL>
   </li>
   <li>
 <P CLASS="Para">
 Click <SPAN CLASS="Label">
-<b>OK</b> </SPAN>
-when you are done. Every time you launch this executable, these execution arguments will be used.</P>
+<b>Apply</b> </SPAN> or <SPAN CLASS="Label">
+<b>Debug</b> </SPAN>
+when you are done. Every time you launch this configuration, these execution arguments will be used.</P>
   </li>
 </ol>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
 <p>
-<a href="../tasks/tasks-141.htm">Connecting to a 
-remote VM with the Java Remote Application launcher</a><br>
-<a href="../tasks/tasks-17.htm">Creating a new Java 
-class</a><br>
-<a href="../tasks/tasks-20.htm">Creating a class in 
-an existing compilation unit</a><br>
 <a href="../tasks/tasks-130.htm">Launching a Java 
 program</a><br>
 <a href="../tasks/tasks-136.htm">Stepping through 
 the execution of a program</a><br>
 <a href="../tasks/tasks-107.htm">Viewing compilation 
 errors and warnings</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Package Explorer view</a></p>
+
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
