Minor updates for 2.0

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-5.htm
@@ -15,8 +15,7 @@ presentations of or ways to navigate the information in your workbench.&nbsp; Fo
 example, the Navigator view displays projects and other resources that you are working
 with.</P>
 <P CLASS="Para" Label=Type>
- Views also have their own
-context menus. To open the context menu for a view, click the icon at the left
+ Views also have their own menus. To open the menu for a view, click the icon at the left
 end of the view's title bar. Some views also have their own toolbars. The actions represented by buttons on view
 toolbars only affect the items within that view.&nbsp;</P>
 <P CLASS="Para" Label=Type>
