--- a/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cworkset.htm
@@ -10,13 +10,13 @@
 <H1 CLASS="Head">
 Working sets</H1>
 <P CLASS="Para" Label=Type>
-Working sets group elements for display in viewers or for operations on a set 
+Working sets group elements for display in views or for operations on a set 
 of elements. </P>
 
 <P CLASS="Para" Label=Type>
 The navigator view uses working sets to restrict the set of resources that are 
-displayed. If a working set is selected in the navigator only resources, 
-children of resources and parents of resources contained in the working set are 
+displayed. If a working set is selected in the navigator, only resources, 
+children of resources, and parents of resources contained in the working set are 
 shown. </P>
 
 <P CLASS="Para" Label=Type>
@@ -24,7 +24,7 @@ Working sets may be used in the task view to limit the display of tasks in a
 similar fashion as for the navigator view. </P>
 
 <P CLASS="Para" Label=Type>
-When using the workbench search facility working sets may be used to restrict 
+When using the workbench search facility, working sets may be used to restrict 
 the set of elements that are searched. </P>
 
 <P CLASS="Para" Label=Type>
@@ -36,6 +36,10 @@ sets and to create new working sets.
 <P CLASS="Para" Label=Type>
 &nbsp;
 <img align="texttop" border="0" src="../images/Image87_workset_sel.jpg" alt="Picture of working set selection dialog" >
+</P>
+
+<P CLASS="Para" Label=Type>
+&nbsp;
 </P>
 
 <P CLASS="Para" Label=Type>
@@ -63,6 +67,10 @@ editing wizards.
 <P CLASS="Para" Label=Type>
 &nbsp;
 <img align="texttop" border="0" src="../images/Image89_workset_new_res.jpg" alt="Picture of edit page of working set wizard" >
+</P>
+
+<P CLASS="Para" Label=Type>
+&nbsp;
 </P>
 
 <DIV CLASS="Note">
