--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
@@ -11,7 +11,8 @@
 Perspectives</H1>
 <p CLASS="Para" Label="Type">Each workbench window contains one or more
 perspectives. A perspective defines the initial set and layout of views
-in the workbench window. Each perspective provides a set of capabilities aimed
+in the workbench window. Within the window, each perspective shares the same set
+of editors. Each perspective provides a set of capabilities aimed
 at accomplishing a specific type of task or working with specific types of
 resources.&nbsp;For example, the Java perspective combines views that you would
 commonly use while editing Java source files, while the Debug perspective
