Inspector --> Expressions view

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-11.htm
@@ -13,7 +13,7 @@ Scrapbook </H1>
 <P CLASS="Para">
 The JDT contributes a scrapbook facility that can be used to experiment and evaluate Java expressions (such 
 as code snippets). 
-Java scrapbook errors are reported in the editor. Snippets are edited and evaluated in the Scrapbook page editor. In the editor you can select a code snippet, evaluate it, and display the result as a string or show the result object in the debugger's inspector.</P>
+Java scrapbook errors are reported in the editor. Snippets are edited and evaluated in the Scrapbook page editor. In the editor you can select a code snippet, evaluate it, and display the result as a string or show the result object in the debugger's expressions view.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a> <br>
 <a href="../concepts/concepts-10.htm">Debugger</a></p>
@@ -30,7 +30,7 @@ errors and warnings</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <P CLASS="Para">
 <a href="../reference/ref-34.htm">Java scrapbook page</a><br>
-<a href="../reference/ref-56.htm">Inspector view</a></P>
+<a href="../reference/ref-56.htm">Expressions view</a></P>
 
 <p><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
