--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -45,14 +45,10 @@ Inspect</SPAN>
 <a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p dir="ltr"><a href="../reference/ref-52.htm">Display view</a><br>
-<a href="../reference/ref-56.htm">Inspector view</a><br>
+<a href="../reference/ref-56.htm">Expressions view</a><br>
 &nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12"> </p>
-
-
-
-
 
 </BODY>
 </HTML>
