--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head">
 Inspecting the result of evaluating an expression</H1>
 <P CLASS="Para">
-Inspecting shows the result of evaluating an expression in the Inspector view.</P>
+Inspecting shows the result of evaluating an expression in the Expressions view.</P>
 <ol>
   <li>
 <P CLASS="Para">
@@ -45,16 +45,13 @@ expression</a><br>
 <a href="../tasks/tasks-156.htm">Viewing runtime 
 exceptions</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-56.htm">Inspector view</a><br>
+<p><a href="../reference/ref-56.htm">Expressions view</a><br>
 <a href="../reference/ref-34.htm">Java scrapbook page</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
 
 </P>
-
-
-
 
 
 </BODY>
