--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
@@ -32,7 +32,7 @@ result of evaluating an expression</a><br>
 <a href="../tasks/tasks-156.htm">Viewing runtime 
 exceptions</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-56.htm">Inspector view</a><br>
+<p><a href="../reference/ref-56.htm">Expressions view</a><br>
 <a href="../reference/ref-45.htm">Console view</a><br>
 &nbsp;</p>
 <P>&nbsp;<br>
