*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/ttoolbars.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/ttoolbars.htm
@@ -20,6 +20,10 @@ by a thin vertical line.
     if it does not have thick vertical bars next to the thin vertical toolbar
     dividers.</p>
     <p CLASS="Para">
+    <img align="texttop" border="0" src="../images/Image????.jpg" alt="Locked toolbar">
+    <img align="texttop" border="0" src="../images/Image????.jpg" alt="Unlocked toolbar">    
+    </P>
+    <p CLASS="Para">
     If the toolbar is locked, unlock the toolbar by selecting the <b>Window->Lock the Toolbars</b> menu item.
 	</p>
     </li>
