--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60_team.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60_team.htm
@@ -4,23 +4,21 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Team tutorial</title>
+<title>Team CVS tutorial</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Team tutorial</H1>
-<P>In this chapter, we will learn to use the team capabilities built into
-the workbench.	The steps in this chapter are team oriented; you cannot (easily)
-complete these tutorials if others are not simultaneously working through this chapter.
-</P>
+<H1 CLASS="Head"> Team CVS tutorial</H1>
+<P>In this chapter, we will learn to use the CVS team capabilities built into 
+  the workbench. The steps in this chapter are team oriented; you cannot (easily) 
+  complete these tutorials if others are not simultaneously working through this 
+  chapter. </P>
 
 
-<P>We will learn how to work on our project, release it to a stream for others
-on the team to use. As we continue to work on the project alongside
-other users we will see how to release resources that other users may be
-simultaneously working on, and how to catch up to changes in the project.
-</P>
+<P>We will learn how to work on our project, then commit changes to the repository 
+  for others on the team to use. As we continue to work on the project alongside 
+  other users we will see how to Commit resources that other users may be simultaneously 
+  working on, and how to results those changes in the project. </P>
 
 
 <P>Remember, before we get started you need to entice at least one coworker into
