--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60a_setup.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-60a_setup.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h2>
-Setting up a repository</h2>
+<h2> Setting up a CVS repository</h2>
 <P CLASS="Para">
 A repository is a persistent store that coordinates multi-user access to the
 resources being developed by a team. The workbench comes with CVS support
