--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
@@ -11,9 +11,9 @@
 
 <DIV CLASS="Subtopic">
 <h2>Starting offline</h2>
-<P CLASS="Para">We will start our team tutorial by working offline and creating
-a simple project. Once the project is made we will see how to release it to the
-repository.&nbsp;</P>
+  <P CLASS="Para">We will start our team CVS tutorial by working offline and creating 
+    a simple project. Once the project is made we will see how to release it to 
+    the repository.&nbsp;</P>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3" width="616">
 <THEAD>
 </THEAD>
@@ -64,11 +64,10 @@ Their contents should be as follows:
 </DIV>
 
 
-<P>&nbsp;We can continue to work with our project in this mode but unless we
-release the project into the repository others on our team will be unable to
-work on the project with us. In the next few sections we will see how to release
-our project to the&nbsp; repository.
-</P>
+<P>&nbsp;We can continue to work with our project in this mode but unless we commit 
+  the project into the repository others on our team will be unable to work on 
+  the project with us. In the next few sections we will see how to commit our 
+  project to the&nbsp; repository. </P>
 
 
 <P><br>
