--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repoloca.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repoloca.htm
@@ -16,10 +16,8 @@ Sharing our project</h2>
 We have created our project in offline mode. To make this project available to
 other team members we need to do two things:</P>
 <ol>
-  <li>
-    Specify the location of our team's repository.</li>
-  <li>
-    Release the work into that repository.&nbsp;</li>
+    <li> Specify the location of our team's CVS repository.</li>
+    <li> Commit the work into that repository.&nbsp;</li>
 </ol>
 </DIV>
 <P>&nbsp;<br>
