--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -22,38 +22,26 @@ specify an available repository.</p>
 <TD valign="top" align="left">
 <b>1.</b>
 </TD>
-<TD valign="top" align="left">
-In the workbench window click on the Repositories tab. This view shows all of
-the repositories that we are currently working with. As you can see, the view is
-empty, meaning we still need to specify a repository.
-</TD>
+      <TD valign="top" align="left"> Open the CVS Repository Browsing perspective. 
+        The top left view shows all of the CVS repositories that we are currently 
+        working with. As you can see, the view is empty, meaning we still need 
+        to specify a repository. </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <b>2.</b>
 </TD>
-<TD valign="top" align="left">
-There are two ways to specify the repository we want to work with:
-<ul>
-  <li>In the context menu of the Repositories view choose New &gt;&nbsp; CVS
-    Repository Location...</li>
-</ul>
-<blockquote>
-  <blockquote>
-    <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" width="291" height="129"></p>
-  </blockquote>
-</blockquote>
-<ul>
-  <li>Alternatively we can choose File &gt;New &gt; Other... Then in the New wizard
-    choose CVS in the left pane and Repository Location in the right pane. Then
-    click Next.&nbsp;&nbsp;</li>
-</ul>
-<blockquote>
-  <blockquote>
-    <p><img align="texttop" border="0" src="../images/Image82_repo_new2.jpg" width="501" height="159"></p>
-  </blockquote>
-</blockquote>
-</TD>
+      <TD valign="top" align="left"> In the context menu of the CVS Repositories 
+        view choose New &gt;&nbsp;Repository Location... 
+        <blockquote> 
+          <blockquote> 
+            <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" width="291" height="129"></p>
+          </blockquote>
+        </blockquote>
+        <blockquote> 
+          <blockquote>&nbsp;</blockquote>
+        </blockquote>
+      </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
@@ -76,10 +64,9 @@ repository administrator in order to fill in the necessary information.
 <b>4.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the <i> Connection type </i> field, select the type of CVS connection for the
-repository.&nbsp; Choose pserver.</P>
+      <TD valign="top" align="left"> 
+        <P CLASS="Para"> In the <i> Host </i> field, type the address of the host 
+          (e.g., &quot;teamsamples.com&quot;).</P>
 </TD>
 </TR>
 <TR>
@@ -88,9 +75,9 @@ repository.&nbsp; Choose pserver.</P>
 <b>5.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the <i> User name </i> field, type the user name under which you want to connect.</P>
+      <TD valign="top" align="left"> 
+        <P CLASS="Para"> In the <i> Repository path </i> field, type the path 
+          for the repository at the host address (e.g., &quot;/home/cvsroot/repositoryName&quot;).</P>
 </TD>
 </TR>
 <TR>
@@ -99,9 +86,9 @@ In the <i> User name </i> field, type the user name under which you want to conn
 <b>6.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the <i> Host name </i> field, type the address of the host (e.g., &quot;teamsamples.com&quot;).</P>
+      <TD valign="top" align="left"> 
+        <P CLASS="Para">In the <i> User </i> field, type the user name under which 
+          you want to connect.</P>
 </TD>
 </TR>
 <TR>
@@ -110,9 +97,8 @@ In the <i> Host name </i> field, type the address of the host (e.g., &quot;teams
 <b>7.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the <i> Repository path </i> field, type the path for the repository at the host address (e.g., &quot;/home/cvsroot/repositoryName&quot;).</P>
+      <TD valign="top" align="left"> 
+        <P CLASS="Para">In the <i>Password</i> field, type your password.</P>
 </TD>
 </TR>
 <TR>
@@ -121,24 +107,29 @@ In the <i> Repository path </i> field, type the path for the repository at the h
 <b>8.</b>
 </P>
 </TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-The <i> CVS location</i> field automatically updates with the location information from the other fields in the dialog. You do not need to type anything else in this field. </P>
+      <TD valign="top" align="left"> 
+        <P CLASS="Para"> In the <i> Connection type </i> field, select the type 
+          of CVS connection for the repository.&nbsp; Choose pserver. </P>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <b>9.</b>
 </TD>
-<TD valign="top" align="left">
-By default the <i>Validate location on finish<b> </b></i>is checked.&nbsp;
-</TD>
+      <TD valign="top" align="left">
+	  <P CLASS="Para"> Leave<i> Use Default Port</i> enabled.&nbsp;</P> 
+      </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
-<P CLASS="Para">
 <b>10.</b>
-</P>
+</TD>
+      <TD valign="top" align="left"> By default the <i>Validate location on finish<b> 
+        </b></i>is checked.&nbsp; </TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
+        <P CLASS="Para"> <b>11.</b> </P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
@@ -151,9 +142,7 @@ Note that the repository connection is only used to validate the information.</P
 </TR>
 <TR>
 <TD valign="top" align="left">
-<P CLASS="Para">
-<b>11.</b>
-</P>
+        <P CLASS="Para"> <b>12.</b> </P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">Observe that the Repositories view now shows the new repository location.</P>
