--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61e_whatisloc.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61e_whatisloc.htm
@@ -12,24 +12,20 @@
 is a repository location</h3>
 <DIV CLASS="Subtopic">
 
-<p CLASS="Para">We have just added a new repository location to the Repositories view. This is probably a good
-time to ask
-ourselves what a repository location is or more importantly what it isn't.</p>
-<p CLASS="Para">A repository location is not an actual live connection, instead
-it is a description of where the repository is located. At a later time
-when we are releasing work to the repository or catching up to work done by
-others the workbench will create a connection based on this location
-information.&nbsp;</p>
-<p CLASS="Para">To make this even clearer - suppose we disconnected from the network and
-went home, the Repositories view would continue to show us the list of known
-repository locations. In addition, as we will soon see, the projects themselves
-will still know the repository location that they are associated with. This means
-that when we unplug and go home, we can continue to work at home in an offline
-mode. Ultimately when we reconnect back at work, the project will still know where
-its repository
-is. As an added bonus if we have connectivity to the repository from home, we
-will in fact be able to continue to work with the team repository once at
-home.&nbsp;
+  <p CLASS="Para">We have just added a new repository location to the CVS Repositories 
+    view. This is probably a good time to ask ourselves what a repository location 
+    is or more importantly what it isn't.</p>
+  <p CLASS="Para">A repository location is not an actual live connection, instead 
+    it is a description of where the repository is located. At a later time when 
+    we are committing work to the repository or updating with work done by others, 
+    the workbench will create a connection based on this location information.&nbsp; 
+    Connections will be opened and close as required when performing CVS team 
+    operations, and those connections will be based on the information you provided 
+    in the repository location. </p>
+  <p CLASS="Para">Suppose we disconnected from the network and went home, the 
+    CVS Repositories view would continue to show us the list of known repository 
+    locations. In addition, as we will soon see, the projects themselves will 
+    still know the repository location that they are associated with.
 </DIV>
 <P>&nbsp;<br>
 <img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
